--- a/heybulldog/src/components/Detalles/Detalles.css
+++ b/heybulldog/src/components/Detalles/Detalles.css
@@ -1,8 +1,10 @@
-.Mostrador{display: flex;
-align-items: center;
-flex-direction: column;
-font-family: verdana;
-color: purple;}
-.foto{
-    width: auto;
+.Mostrador {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: verdana;
+  color: white;
+}
+.foto {
+  width: auto;
 }
